ai-multiten-full/charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-multiten-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: "*.app.local"
      http:
        paths:
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 4201
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shell
                port:
                  number: 4200
    - host: "api.app.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
